--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "analogic/lescript",
   "description": "Lescript is simplified concept of ACME client implementation especially for Let's encrypt service. It's goal is to have one easy to use PHP file without dependencies.",
   "type": "library",
+  "license": "BSD",
   "keywords": [
     "encryption","letsencrypt", "ACME"
   ],
