--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,14 @@
   "keywords": [
     "encryption","letsencrypt", "ACME"
   ],
+  "authors": [
+    {
+      "name": "Stanislav Humplik",
+      "email": "sh@analogic.cz",
+      "homepage": "https://analogic.cz",
+      "role": "Developer"
+    }
+  ],
   "require": {
     "php": ">=5.4.8",
     "ext-curl": "*",
