Removing Logger dependency, adding Psr/Log/LoggerInterface to composer require-dev

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
     "ext-curl": "*",
     "ext-openssl": "*"
   },
+  "require-dev": {
+    "psr/log": "^1"
+  },
   "autoload": {
     "files": ["Lescript.php"]
   }
