--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,13 @@
     "ext-openssl": "*"
   },
   "require-dev": {
-    "psr/log": "^1"
+    "psr/log": "^1",
+    "phpunit/phpunit": "5.5.*"
   },
   "autoload": {
-    "files": ["Lescript.php"]
+    "files": ["Lescript.php"],
+    "psr-4": {
+      "Analogic\\ACME\\test\\": "test"
+    }
   }
 }
