split classes into multiple files, added doc blocks
This makes it easier to maintain. A build script to create a single file
again could be added if wanted.

--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
     "phpunit/phpunit": "5.5.*"
   },
   "autoload": {
-    "files": ["Lescript.php"],
     "psr-4": {
+      "Analogic\\ACME\\": "src",
       "Analogic\\ACME\\test\\": "test"
     }
   }
